--- a/src/Invitation.css
+++ b/src/Invitation.css
@@ -15,7 +15,8 @@
   
   .invitation-container p {
     font-size: 1.2rem;
-    color: #555;
+    color: #000000;
+    font-weight: bold;
   }
 
   /* Animations */
